docs/sf-export/sfdx-raw/objects/Program_Length_Setting__mdt/Program_Length_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Program Length Setting</label>
    <pluralLabel>Program Length Settings</pluralLabel>
</CustomObject>