docs/sf-export/sfdx-raw/objects/Program_Length_Setting__mdt/fields/program_length__c.field-meta.xml
<CustomField>
    <fullName>program_length__c</fullName>
    <label>program length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>