docs/sf-export/sfdx-raw/objects/Program_Length_Setting__mdt/fields/Qualified_For_Bonus_Program_Length__c.field-meta.xml
<CustomField>
    <fullName>Qualified_For_Bonus_Program_Length__c</fullName>
    <label>Qualified For Bonus Program Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>