docs/sf-export/sfdx-raw/objects/Program_Length_Setting__mdt/fields/To_Range__c.field-meta.xml
<CustomField>
    <fullName>To_Range__c</fullName>
    <label>To Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>