docs/sf-export/sfdx-raw/objects/Program_Length_Setting__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>From_Range__c</columns>
    <columns>To_Range__c</columns>
    <columns>program_length__c</columns>
    <columns>Qualified_For_Bonus_Program_Length__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>